# planify

core/: meson.build
core/Services/CalDAV/: CalDAVClient.vala
core/Services/CalDAV/Providers/: Zoho.vala
data/: translations_metrics.json
docs/: PR-SUMMARY.md  caldav-zoho-adapter.md  caldav-zoho-setup.md  verify-zoho-caldav.sh
po/: af.po  ak.po  ar.po  az.po  be.po  bg.po  bn.po  bs.po  ca.po  ckb.po  cs.po  cv.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fa.po  fi.po  fr.po  fr_CA.po  ga.po  gl.po  he.po  hi.po  hr.po  hu.po  hy.po  id.po  io.github.alainm23.planify.pot  is.po  it.po  ja.po  jv.po  ka.po  (+46 more)
test/: meson.build  test-caldav-zoho.vala
